# basic-fastapi

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  init.sql  main.py  pyproject.toml
src/: api.py  logging.py  main.py
src/auth/: controller.py  models.py  service.py
src/database/: core.py
src/entities/: user.py
