[project]
name = "basic-fasapi"
version = "0.1.0"
description = "A clean and modular FastAPI base project with essential configurations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.2.0",
    "fastapi>=0.104.0",
    "passlib>=1.7.4",
    "pre-commit>=4.3.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.24.0",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
]
